Change struck-through text color to red

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         .struck-through {
             text-decoration: line-through;
             text-decoration-thickness: 2px;
-            text-decoration-color: black;
+            text-decoration-color: red;
         }
 
         p { line-height: 1.6; }
